--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: neovim-gtk
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+version: '0.1.1'
+summary: GUI client for NeoVIM
 description: |
   This is my-snap's description. You have a paragraph or two to tell the
   most important story about your snap. Keep it under 100 words though,
@@ -12,15 +12,18 @@ confinement: devmode # use 'strict' once you have the right plugs and slots
 
 apps:
   neovim-gtk:
-    command: desktop-launch nvim-gtk --nvim-bin-path=$SNAP/usr/local/bin/nvim
-    plugs: [home, x11, unity7, gsettings, pulseaudio]
+    command: desktop-launch nvim-gtk --nvim-bin-path=/snap/bin/neovim-gtk.neovim
+    plugs: [home, x11, unity7, gsettings, pulseaudio, network-bind]
+  neovim:
+    command: desktop-launch neovim.wrapper
+    plugs: [home, network-bind]
 
 parts:
   neovim:
     source: git://github.com/neovim/neovim
     source-tag: v0.1.7
     plugin: make
-    make-parameters: [CMAKE_BUILD_TYPE=Release]
+    make-parameters: [CMAKE_BUILD_TYPE=Release, CMAKE_EXTRA_FLAGS="-DCMAKE_INSTALL_PREFIX=/"]
     build-packages: [libtool, libtool-bin, autoconf, automake, cmake]
     
   neovim-gtk:
@@ -28,3 +31,9 @@ parts:
     source: https://github.com/daa84/neovim-gtk.git
     build-packages: [libgtk-3-dev]
     after: [desktop-gtk3]
+
+  env:
+    source: .
+    plugin: dump
+    organize:
+        neovim.wrapper: usr/bin/neovim.wrapper
